<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CompletedExercises">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:textAlignment="center"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        tools:layout_height="100dp">

        <TextView
            android:id="@+id/ejuoksu"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorners"
            android:ems="10"
            android:gravity="center"
            android:text="@string/run"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/epyora"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:text="@string/biking"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ehiihto"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:text="@string/skiing"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="#0000CC"
        android:dividerHeight="0.1dp"></ListView>

<!--
    <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
-->
    </LinearLayout>

