<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <Button
            android:id="@+id/showMapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/addToProgramBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/program"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/programInfoText" />

        <ImageView
            android:id="@+id/exerciseImage"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:layout_marginStart="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/training_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/runner3" />

        <ImageView
            android:id="@+id/trashJourney"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/del_program"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseImage"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/trashcan" />

        <TextView
            android:id="@+id/itemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/exerciseImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/exerciseImage"
            app:layout_constraintTop_toBottomOf="@+id/itemDate" />

        <TextView
            android:id="@+id/itemDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/exerciseImage"
            app:layout_constraintTop_toBottomOf="@+id/itemDistance" />

        <TextView
            android:id="@+id/itemAvgSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/exerciseImage"
            app:layout_constraintTop_toBottomOf="@+id/itemDuration" />

        <TextView
            android:id="@+id/itemCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/exerciseImage"
            app:layout_constraintTop_toBottomOf="@+id/itemAvgSpeed" />

        <TextView
            android:id="@+id/programInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/journey_add_to_program"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showMapBtn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/program_route"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
